# oink

./: .gitignore  CMakeLists.txt  README.md  oink.pc.cmake.in
.github/workflows/: ci-build.yml
cmake/: oink-config.cmake.in
examples/: ActionConverter.tlsf.ehoa.pg  Automata.tlsf.ehoa.pg  Automata16S.tlsf.ehoa.pg  Automata32S.tlsf.ehoa.pg  Button.tlsf.ehoa.pg  Cockpitboard.tlsf.ehoa.pg  EnemeyModule.tlsf.ehoa.pg  EscalatorBidirectional.tlsf.ehoa.pg  EscalatorBidirectionalInit.tlsf.ehoa.pg  EscalatorCounting.tlsf.ehoa.pg  EscalatorCountingInit.tlsf.ehoa.pg  EscalatorNonCounting.tlsf.ehoa.pg  EscalatorNonReactive.tlsf.ehoa.pg  EscalatorSmart.tlsf.ehoa.pg  Gamelogic.tlsf.ehoa.pg  GamemodeChooser.tlsf.ehoa.pg  Gamemodule.tlsf.ehoa.pg  KitchenTimerV0.tlsf.ehoa.pg  KitchenTimerV1.tlsf.ehoa.pg  KitchenTimerV10.tlsf.ehoa.pg  KitchenTimerV2.tlsf.ehoa.pg  KitchenTimerV3.tlsf.ehoa.pg  KitchenTimerV4.tlsf.ehoa.pg  KitchenTimerV5.tlsf.ehoa.pg  KitchenTimerV6.tlsf.ehoa.pg  KitchenTimerV7.tlsf.ehoa.pg  KitchenTimerV8.tlsf.ehoa.pg  KitchenTimerV9.tlsf.ehoa.pg  ModdifiedLedMatrix4X.tlsf.ehoa.pg  MusicAppFeedback.tlsf.ehoa.pg  MusicAppMotivating.tlsf.ehoa.pg  MusicAppSimple.tlsf.ehoa.pg  OneCounter.tlsf.ehoa.pg  OneCounterGui.tlsf.ehoa.pg  OneCounterGuiA1.tlsf.ehoa.pg  OneCounterGuiA2.tlsf.ehoa.pg  OneCounterGuiA3.tlsf.ehoa.pg  OneCounterGuiA4.tlsf.ehoa.pg  OneCounterGuiA5.tlsf.ehoa.pg  OneCounterGuiA6.tlsf.ehoa.pg  (+228 more)
include/oink/: bitset.hpp  error.hpp  game.hpp  oink.hpp  pgparser.hpp  solver.hpp  solvers.hpp
src/: apt.cpp  apt.hpp  bitset.hpp  dftl.cpp  dftl.hpp  dp.cpp  dp.hpp  dtl.cpp  dtl.hpp  error.hpp  fpi.cpp  fpi.hpp  fpj.cpp  fpj.hpp  game.cpp  game.hpp  lace.c  lace.h  mspm.cpp  mspm.hpp  npp.cpp  npp.hpp  oink.cpp  oink.hpp  pgparser.cpp  pp.cpp  pp.hpp  ppj.cpp  ppj.hpp  ppp.cpp  ppp.hpp  ppq.cpp  ppq.hpp  printf.hpp  psi.cpp  psi.hpp  ptl.cpp  ptl.hpp  qpt.cpp  qpt.hpp  (+35 more)
src/solvers/: dp.hpp  fpi.cpp  fpi.hpp  fpj.cpp  gpm.cpp  gpm.hpp  mspm.hpp  npp.cpp  pmtl.cpp  pmtl.hpp  ppq.cpp  ppq.hpp  psi.cpp  psi.hpp  ptl.cpp  qpt.cpp  qpt.hpp  rr.hpp  rrdp.cpp  spm.cpp  spm.hpp  ssi.cpp  ssi.hpp  tl.cpp  tlq.cpp  tlq.hpp  tspm.cpp  tspm.hpp  zlk.cpp  zlk.hpp  zlkq.hpp
src/tools/: counter_core.cpp  counter_dftl.cpp  counter_dp.cpp  counter_m.cpp  counter_odftl.cpp  counter_ortl.cpp  counter_qpt.cpp  counter_rob.cpp  counter_rr.cpp  counter_symsi.cpp  dotty.cpp  getrss.c  nudge.cpp  rngame.cpp  simple.cpp  solve.cpp  stgame.cpp  tc+.cpp  tc.cpp  verify.cpp
test/: test_measures.cpp  test_solvers.cpp
tests/: dot.sh  run.sh  test.sh  vb002  vb003  vb004  vb006  vb010  vb012  vb014  vb018  vb019  vb020  vb021  vb022  vb025  vb027  vb030  vb033  vb036  vb038  vb044  vb046  vb047  vb049  vb051  vb052  vb053  vb056  vb058  vb060  vb063  vb067  vb068  vb069  vb070  vb071  vb073  vb075  vb076  (+215 more)
